@@ -2,7 +2,7 @@
 # Kernel/Output/HTML/Layout.pm - provides generic HTML output
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: Layout.pm,v 1.198 2009/12/09 08:38:52 mg Exp $
+# $Id: Layout.pm,v 1.199 2009/12/09 14:29:32 mg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -20,7 +20,7 @@ use Kernel::Language;
 use Kernel::System::HTMLUtils;
 
 use vars qw(@ISA $VERSION);
-$VERSION = qw($Revision: 1.198 $) [1];
+$VERSION = qw($Revision: 1.199 $) [1];
 
 =head1 NAME
 
@@ -2687,7 +2687,7 @@ sub BuildDateSelection {
             . $Prefix
             . "Day\" id=\"" . $Prefix . "Day\" size=\"2\" maxlength=\"2\" "
             . "value=\""
-            . ( $Param{ $Prefix . 'Day' } || $D ) . "\"/>";
+            . sprintf( "%02d", ( $Param{ $Prefix . 'Day' } || $D ) ) . "\"/>";
     }
     if ( $Format eq 'DateInputFormatLong' ) {
 
@@ -4309,6 +4309,6 @@ did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
 
 =head1 VERSION
 
-$Revision: 1.198 $ $Date: 2009/12/09 08:38:52 $
+$Revision: 1.199 $ $Date: 2009/12/09 14:29:32 $
 
 =cut
